style: Implement designs

--- a/index.html
+++ b/index.html
@@ -5,12 +5,257 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
     <script src="/scripts/main.js" defer></script>
     <title>Library</title>
 </head>
 
 <body>
+    <header>
+        <h1>The Library</h1>
+    </header>
+    <div class="container">
+        <button class="add-book">+ Add Book</button>
+        <main id="book-wrapper">
+            <div id="book">
+                <span id="more"><img src="/images/more.png" alt=""></span>
+                <div id="content">
+                    <h2 id="title">The Coder</h2>
+                    <p id="author">By: The Author</p>
+                    <p id="language">Language: Eng</p>
+                </div>
+                <span id="status">
+                    <span>234 / 444</span>
+                    <button id="read-percentage">
+                        <div class="flex-wrapper">
+                            <div class="single-chart">
+                                <svg viewBox="0 0 36 36" class="circular-chart green">
+                                    <path class="circle-bg" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <text x="18" y="21.35" class="percentage">52%</text>
+                                </svg>
+                            </div>
 
+                    </button>
+                </span>
+            </div>
+            <div id="book">
+                <span id="more">...</span>
+                <div id="content">
+                    <h2 id="title">The Coder</h2>
+                    <p id="author">By: The Author</p>
+                    <p id="language">Language: Eng</p>
+                </div>
+                <span id="status">
+                    <span>234 / 444</span>
+                    <button id="read-percentage">
+                        <div class="flex-wrapper">
+                            <div class="single-chart">
+                                <svg viewBox="0 0 36 36" class="circular-chart green">
+                                    <path class="circle-bg" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <text x="18" y="21.35" class="percentage">52%</text>
+                                </svg>
+                            </div>
+
+                    </button>
+                </span>
+            </div>
+            <div id="book">
+                <span id="more">...</span>
+                <div id="content">
+                    <h2 id="title">The Coder</h2>
+                    <p id="author">By: The Author</p>
+                    <p id="language">Language: Eng</p>
+                </div>
+                <span id="status">
+                    <span>234 / 444</span>
+                    <button id="read-percentage">
+                        <div class="flex-wrapper">
+                            <div class="single-chart">
+                                <svg viewBox="0 0 36 36" class="circular-chart green">
+                                    <path class="circle-bg" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <text x="18" y="21.35" class="percentage">52%</text>
+                                </svg>
+                            </div>
+
+                    </button>
+                </span>
+            </div>
+            <div id="book">
+                <span id="more">...</span>
+                <div id="content">
+                    <h2 id="title">The Coder</h2>
+                    <p id="author">By: The Author</p>
+                    <p id="language">Language: Eng</p>
+                </div>
+                <span id="status">
+                    <span>234 / 444</span>
+                    <button id="read-percentage">
+                        <div class="flex-wrapper">
+                            <div class="single-chart">
+                                <svg viewBox="0 0 36 36" class="circular-chart green">
+                                    <path class="circle-bg" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <text x="18" y="21.35" class="percentage">52%</text>
+                                </svg>
+                            </div>
+
+                    </button>
+                </span>
+            </div>
+            <div id="book">
+                <span id="more">...</span>
+                <div id="content">
+                    <h2 id="title">The Coder</h2>
+                    <p id="author">By: The Author</p>
+                    <p id="language">Language: Eng</p>
+                </div>
+                <span id="status">
+                    <span>234 / 444</span>
+                    <button id="read-percentage">
+                        <div class="flex-wrapper">
+                            <div class="single-chart">
+                                <svg viewBox="0 0 36 36" class="circular-chart green">
+                                    <path class="circle-bg" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <text x="18" y="21.35" class="percentage">52%</text>
+                                </svg>
+                            </div>
+
+                    </button>
+                </span>
+            </div>
+            <div id="book">
+                <span id="more">...</span>
+                <div id="content">
+                    <h2 id="title">The Coder</h2>
+                    <p id="author">By: The Author</p>
+                    <p id="language">Language: Eng</p>
+                </div>
+                <span id="status">
+                    <span>234 / 444</span>
+                    <button id="read-percentage">
+                        <div class="flex-wrapper">
+                            <div class="single-chart">
+                                <svg viewBox="0 0 36 36" class="circular-chart green">
+                                    <path class="circle-bg" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <text x="18" y="21.35" class="percentage">52%</text>
+                                </svg>
+                            </div>
+
+                    </button>
+                </span>
+            </div>
+            <div id="book">
+                <span id="more">...</span>
+                <div id="content">
+                    <h2 id="title">The Coder</h2>
+                    <p id="author">By: The Author</p>
+                    <p id="language">Language: Eng</p>
+                </div>
+                <span id="status">
+                    <span>234 / 444</span>
+                    <button id="read-percentage">
+                        <div class="flex-wrapper">
+                            <div class="single-chart">
+                                <svg viewBox="0 0 36 36" class="circular-chart green">
+                                    <path class="circle-bg" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <text x="18" y="21.35" class="percentage">52%</text>
+                                </svg>
+                            </div>
+
+                    </button>
+                </span>
+            </div>
+            <div id="book">
+                <span id="more">...</span>
+                <div id="content">
+                    <h2 id="title">The Coder</h2>
+                    <p id="author">By: The Author</p>
+                    <p id="language">Language: Eng</p>
+                </div>
+                <span id="status">
+                    <span>234 / 444</span>
+                    <button id="read-percentage">
+                        <div class="flex-wrapper">
+                            <div class="single-chart">
+                                <svg viewBox="0 0 36 36" class="circular-chart green">
+                                    <path class="circle-bg" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <text x="18" y="21.35" class="percentage">52%</text>
+                                </svg>
+                            </div>
+
+                    </button>
+                </span>
+            </div>
+            <div id="book">
+                <span id="more">...</span>
+                <div id="content">
+                    <h2 id="title">The Coder</h2>
+                    <p id="author">By: The Author</p>
+                    <p id="language">Language: Eng</p>
+                </div>
+                <span id="status">
+                    <span>234 / 444</span>
+                    <button id="read-percentage">
+                        <div class="flex-wrapper">
+                            <div class="single-chart">
+                                <svg viewBox="0 0 36 36" class="circular-chart green">
+                                    <path class="circle-bg" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <text x="18" y="21.35" class="percentage">52%</text>
+                                </svg>
+                            </div>
+
+                    </button>
+                </span>
+            </div>
+        </main>
+    </div>
 </body>
 
 </html>
