--- a/index.html
+++ b/index.html
@@ -21,9 +21,41 @@
         <button class="add-book-btn">+ Add Book</button>
         <main id="book-wrapper">
             <div id="book">
-                <span id="more"><img src="/images/more.png" alt=""></span>
+                <span class="more-btn">
+                    <img src="/images/more.png" alt="">
+                    <div class="book-menu">
+                        <div class="book-edit-btn">edit</div>
+                        <div class="book-delete-btn">delete</div>
+                    </div>
+                </span>
+                <div class="content">
+                    <h2 class="title">The Coder</h2>
+                    <p class="author">By: The Author</p>
+                    <p class="language">Language: Eng</p>
+                </div>
+                <span class="status">
+                    <span>234 / 444</span>
+                    <button class="read-percentage">
+                        <div class="flex-wrapper">
+                            <div class="single-chart">
+                                <svg viewBox="0 0 36 36" class="circular-chart green">
+                                    <path class="circle-bg" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
+                                        a 15.9155 15.9155 0 0 1 0 31.831
+                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                    <text x="18" y="21.35" class="percentage">52%</text>
+                                </svg>
+                            </div>
+
+                    </button>
+                </span>
+            </div>
+            <div id="book">
+                <span id="more">...</span>
                 <div id="content">
-                    <h2 id="title">The Coder</h2>
+                    <h2 class="title">The Coder</h2>
                     <p id="author">By: The Author</p>
                     <p id="language">Language: Eng</p>
                 </div>
@@ -49,7 +81,7 @@
             <div id="book">
                 <span id="more">...</span>
                 <div id="content">
-                    <h2 id="title">The Coder</h2>
+                    <h2 class="title">The Coder</h2>
                     <p id="author">By: The Author</p>
                     <p id="language">Language: Eng</p>
                 </div>
@@ -75,7 +107,7 @@
             <div id="book">
                 <span id="more">...</span>
                 <div id="content">
-                    <h2 id="title">The Coder</h2>
+                    <h2 class="title">The Coder</h2>
                     <p id="author">By: The Author</p>
                     <p id="language">Language: Eng</p>
                 </div>
@@ -101,7 +133,7 @@
             <div id="book">
                 <span id="more">...</span>
                 <div id="content">
-                    <h2 id="title">The Coder</h2>
+                    <h2 class="title">The Coder</h2>
                     <p id="author">By: The Author</p>
                     <p id="language">Language: Eng</p>
                 </div>
@@ -127,7 +159,7 @@
             <div id="book">
                 <span id="more">...</span>
                 <div id="content">
-                    <h2 id="title">The Coder</h2>
+                    <h2 class="title">The Coder</h2>
                     <p id="author">By: The Author</p>
                     <p id="language">Language: Eng</p>
                 </div>
@@ -153,7 +185,7 @@
             <div id="book">
                 <span id="more">...</span>
                 <div id="content">
-                    <h2 id="title">The Coder</h2>
+                    <h2 class="title">The Coder</h2>
                     <p id="author">By: The Author</p>
                     <p id="language">Language: Eng</p>
                 </div>
@@ -179,7 +211,7 @@
             <div id="book">
                 <span id="more">...</span>
                 <div id="content">
-                    <h2 id="title">The Coder</h2>
+                    <h2 class="title">The Coder</h2>
                     <p id="author">By: The Author</p>
                     <p id="language">Language: Eng</p>
                 </div>
@@ -205,33 +237,7 @@
             <div id="book">
                 <span id="more">...</span>
                 <div id="content">
-                    <h2 id="title">The Coder</h2>
-                    <p id="author">By: The Author</p>
-                    <p id="language">Language: Eng</p>
-                </div>
-                <span id="status">
-                    <span>234 / 444</span>
-                    <button id="read-percentage">
-                        <div class="flex-wrapper">
-                            <div class="single-chart">
-                                <svg viewBox="0 0 36 36" class="circular-chart green">
-                                    <path class="circle-bg" d="M18 2.0845
-                                        a 15.9155 15.9155 0 0 1 0 31.831
-                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
-                                        a 15.9155 15.9155 0 0 1 0 31.831
-                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                    <text x="18" y="21.35" class="percentage">52%</text>
-                                </svg>
-                            </div>
-
-                    </button>
-                </span>
-            </div>
-            <div id="book">
-                <span id="more">...</span>
-                <div id="content">
-                    <h2 id="title">The Coder</h2>
+                    <h2 class="title">The Coder</h2>
                     <p id="author">By: The Author</p>
                     <p id="language">Language: Eng</p>
                 </div>
@@ -290,10 +296,10 @@
                     <input id="pages" type="tel" placeholder="870">
                 </div>
                 <div class="input-group">
-                    <label for="current-pages">
+                    <label class="current-page-label" for="current-page">
                         You've read so far?
                     </label>
-                    <input id="current-pages" type="tel" placeholder="220" disabled>
+                    <input id="current-page" type="tel" placeholder="220">
                     <label for="is-done">
                         Done reading?
                         <input id="is-done" type="checkbox" name="done-read" value="true">
