--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <div class="container">
         <button class="add-book-btn">+ Add Book</button>
-        <main id="book-wrapper">
+        <main id="book-container">
             <div id="book">
                 <span class="more-btn">
                     <img src="/images/more.png" alt="">
@@ -52,214 +52,6 @@
                     </button>
                 </span>
             </div>
-            <div id="book">
-                <span id="more">...</span>
-                <div id="content">
-                    <h2 class="title">The Coder</h2>
-                    <p id="author">By: The Author</p>
-                    <p id="language">Language: Eng</p>
-                </div>
-                <span id="status">
-                    <span>234 / 444</span>
-                    <button id="read-percentage">
-                        <div class="flex-wrapper">
-                            <div class="single-chart">
-                                <svg viewBox="0 0 36 36" class="circular-chart green">
-                                    <path class="circle-bg" d="M18 2.0845
-                                        a 15.9155 15.9155 0 0 1 0 31.831
-                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
-                                        a 15.9155 15.9155 0 0 1 0 31.831
-                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                    <text x="18" y="21.35" class="percentage">52%</text>
-                                </svg>
-                            </div>
-
-                    </button>
-                </span>
-            </div>
-            <div id="book">
-                <span id="more">...</span>
-                <div id="content">
-                    <h2 class="title">The Coder</h2>
-                    <p id="author">By: The Author</p>
-                    <p id="language">Language: Eng</p>
-                </div>
-                <span id="status">
-                    <span>234 / 444</span>
-                    <button id="read-percentage">
-                        <div class="flex-wrapper">
-                            <div class="single-chart">
-                                <svg viewBox="0 0 36 36" class="circular-chart green">
-                                    <path class="circle-bg" d="M18 2.0845
-                                        a 15.9155 15.9155 0 0 1 0 31.831
-                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
-                                        a 15.9155 15.9155 0 0 1 0 31.831
-                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                    <text x="18" y="21.35" class="percentage">52%</text>
-                                </svg>
-                            </div>
-
-                    </button>
-                </span>
-            </div>
-            <div id="book">
-                <span id="more">...</span>
-                <div id="content">
-                    <h2 class="title">The Coder</h2>
-                    <p id="author">By: The Author</p>
-                    <p id="language">Language: Eng</p>
-                </div>
-                <span id="status">
-                    <span>234 / 444</span>
-                    <button id="read-percentage">
-                        <div class="flex-wrapper">
-                            <div class="single-chart">
-                                <svg viewBox="0 0 36 36" class="circular-chart green">
-                                    <path class="circle-bg" d="M18 2.0845
-                                        a 15.9155 15.9155 0 0 1 0 31.831
-                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
-                                        a 15.9155 15.9155 0 0 1 0 31.831
-                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                    <text x="18" y="21.35" class="percentage">52%</text>
-                                </svg>
-                            </div>
-
-                    </button>
-                </span>
-            </div>
-            <div id="book">
-                <span id="more">...</span>
-                <div id="content">
-                    <h2 class="title">The Coder</h2>
-                    <p id="author">By: The Author</p>
-                    <p id="language">Language: Eng</p>
-                </div>
-                <span id="status">
-                    <span>234 / 444</span>
-                    <button id="read-percentage">
-                        <div class="flex-wrapper">
-                            <div class="single-chart">
-                                <svg viewBox="0 0 36 36" class="circular-chart green">
-                                    <path class="circle-bg" d="M18 2.0845
-                                        a 15.9155 15.9155 0 0 1 0 31.831
-                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
-                                        a 15.9155 15.9155 0 0 1 0 31.831
-                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                    <text x="18" y="21.35" class="percentage">52%</text>
-                                </svg>
-                            </div>
-
-                    </button>
-                </span>
-            </div>
-            <div id="book">
-                <span id="more">...</span>
-                <div id="content">
-                    <h2 class="title">The Coder</h2>
-                    <p id="author">By: The Author</p>
-                    <p id="language">Language: Eng</p>
-                </div>
-                <span id="status">
-                    <span>234 / 444</span>
-                    <button id="read-percentage">
-                        <div class="flex-wrapper">
-                            <div class="single-chart">
-                                <svg viewBox="0 0 36 36" class="circular-chart green">
-                                    <path class="circle-bg" d="M18 2.0845
-                                        a 15.9155 15.9155 0 0 1 0 31.831
-                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
-                                        a 15.9155 15.9155 0 0 1 0 31.831
-                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                    <text x="18" y="21.35" class="percentage">52%</text>
-                                </svg>
-                            </div>
-
-                    </button>
-                </span>
-            </div>
-            <div id="book">
-                <span id="more">...</span>
-                <div id="content">
-                    <h2 class="title">The Coder</h2>
-                    <p id="author">By: The Author</p>
-                    <p id="language">Language: Eng</p>
-                </div>
-                <span id="status">
-                    <span>234 / 444</span>
-                    <button id="read-percentage">
-                        <div class="flex-wrapper">
-                            <div class="single-chart">
-                                <svg viewBox="0 0 36 36" class="circular-chart green">
-                                    <path class="circle-bg" d="M18 2.0845
-                                        a 15.9155 15.9155 0 0 1 0 31.831
-                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
-                                        a 15.9155 15.9155 0 0 1 0 31.831
-                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                    <text x="18" y="21.35" class="percentage">52%</text>
-                                </svg>
-                            </div>
-
-                    </button>
-                </span>
-            </div>
-            <div id="book">
-                <span id="more">...</span>
-                <div id="content">
-                    <h2 class="title">The Coder</h2>
-                    <p id="author">By: The Author</p>
-                    <p id="language">Language: Eng</p>
-                </div>
-                <span id="status">
-                    <span>234 / 444</span>
-                    <button id="read-percentage">
-                        <div class="flex-wrapper">
-                            <div class="single-chart">
-                                <svg viewBox="0 0 36 36" class="circular-chart green">
-                                    <path class="circle-bg" d="M18 2.0845
-                                        a 15.9155 15.9155 0 0 1 0 31.831
-                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
-                                        a 15.9155 15.9155 0 0 1 0 31.831
-                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                    <text x="18" y="21.35" class="percentage">52%</text>
-                                </svg>
-                            </div>
-
-                    </button>
-                </span>
-            </div>
-            <div id="book">
-                <span id="more">...</span>
-                <div id="content">
-                    <h2 class="title">The Coder</h2>
-                    <p id="author">By: The Author</p>
-                    <p id="language">Language: Eng</p>
-                </div>
-                <span id="status">
-                    <span>234 / 444</span>
-                    <button id="read-percentage">
-                        <div class="flex-wrapper">
-                            <div class="single-chart">
-                                <svg viewBox="0 0 36 36" class="circular-chart green">
-                                    <path class="circle-bg" d="M18 2.0845
-                                        a 15.9155 15.9155 0 0 1 0 31.831
-                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                    <path class="circle" stroke-dasharray="52, 100" d="M18 2.0845
-                                        a 15.9155 15.9155 0 0 1 0 31.831
-                                        a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                    <text x="18" y="21.35" class="percentage">52%</text>
-                                </svg>
-                            </div>
-
-                    </button>
-                </span>
-            </div>
         </main>
         <div class="modal">
             <div class="modal-header">
@@ -271,7 +63,7 @@
                     <label for="title">
                         Title
                     </label>
-                    <input id="title" type="text" placeholder="Harry Potter and the Order of the Phoenix">
+                    <input id="title" type="text" placeholder="Harry Potter and the Order of the Phoenix" required>
                 </div>
                 <div class="input-group">
                     <label for="author">
@@ -285,7 +77,7 @@
                     </label>
                     <select name="language" id="language">
                         <option value="english">English</option>
-                        <option value="japanes">Japanes</option>
+                        <option value="japanese">Japanese</option>
                         <option value="tagalog">tagalog</option>
                     </select>
                 </div>
@@ -293,23 +85,26 @@
                     <label for="pages">
                         How many pages?
                     </label>
-                    <input id="pages" type="tel" placeholder="870">
+                    <input id="pages" type="number" placeholder="870" minlength="1" min="0" max="10000" required>
                 </div>
                 <div class="input-group">
                     <label class="current-page-label" for="current-page">
                         You've read so far?
                     </label>
-                    <input id="current-page" type="tel" placeholder="220">
+                    <input id="current-page" type="number" placeholder="220" min="0" max="10000">
                     <label for="is-done">
                         Done reading?
                         <input id="is-done" type="checkbox" name="done-read" value="true">
                     </label>
                 </div>
+                <div class="btn-con">
+                    <button type="submit" class="save-book-btn">SAVE BOOK</button>
+                </div>
             </form>
-            <button class="save-book-btn">SAVE BOOK</button>
         </div>
     </div>
     <div class="bg-dark"></div>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 </body>
 
 </html>
